[gd_scene load_steps=3 format=3 uid="uid://c71c7g4m8a1aj"]

[ext_resource type="Script" uid="uid://bd8l1dgofjho" path="res://sources/language_tool/segment_point_button.gd" id="1_d6v6o"]
[ext_resource type="Texture2D" uid="uid://bgdfoujfibsow" path="res://assets/menus/point_button.png" id="2_6rhkf"]

[node name="SegmentPointButton" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_d6v6o")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -25.0
offset_top = -25.0
offset_right = 175.0
offset_bottom = 175.0
scale = Vector2(0.25, 0.25)
mouse_filter = 0
texture = ExtResource("2_6rhkf")

[node name="IndexLabel" type="Label" parent="TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="TextureRect" to="." method="_on_texture_rect_gui_input"]
